NEW:   - MVP pattern is applied (from the beginner's point of view).

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/fragment"
-        android:name="com.nozimy.app65_home1.ItemFragment"
+        android:name="com.nozimy.app65_home1.ui.listing.ContactsListFragment"
         android:layout_height="match_parent"
         android:layout_width="0dp"
         android:layout_weight="1"/>
